Added some front improvements and updated db entity def

--- a/backend/api/templates/emails/cancellation.html
+++ b/backend/api/templates/emails/cancellation.html
@@ -40,7 +40,7 @@
       {{ first_name }} {{ last_name }}
     </div>
 
-    <p>Cześć {{first_name}}, twoje zamówienie zostało anulowane.</p>
+    <p>Cześć {{first_name}}, twoje zamówienie  {{ order_code }} zostało anulowane.</p>
     <p>Troche lipa, że Cie nie bedzie 🥲</p>
     <p>🗿DOZO</p>
     <div class="footer">
