--- a/backend/api/templates/emails/confirmation.html
+++ b/backend/api/templates/emails/confirmation.html
@@ -39,7 +39,7 @@
     <div class="name">
       {{ first_name }} {{ last_name }}
     </div>
-
+    {{ order_code }}
     <p>Cześć {{first_name}}, trzymaj kody qr potrzebne do odbioru słuchawek:</p>
 
     {% for qr in qr_codes %}
