--- a/backend/api/templates/emails/paymentRequest.html
+++ b/backend/api/templates/emails/paymentRequest.html
@@ -39,7 +39,7 @@
     <div class="name">
       {{ first_name }} {{ last_name }}
     </div>
-
+    {{ order_code }}
     <p>Cześć {{first_name}},</p>
     <p> Twoja wstępna rezerwacja słuchawek została zarejestrowana.</p>
     <p>Aby potwierdzić rezerwację, prosimy o dokonanie opłaty rezerwacyjnej w wysokości <strong>{{ full_price }} PLN</strong>.</p>
