Changed background and added text

--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -12,3 +12,22 @@
 } 
 
 
+/* .swiper-pagination-bullet {
+  background-color: #ccc;
+  opacity: 0.9;
+  transition: all 0.3s ease;
+} */
+
+.swiper-pagination-bullet {
+  background-color: #3182ce; /* Chakra blue.500 */
+  opacity: 0.5; /* Zmniejszona przezroczystość dla nieaktywnych kropek */
+  width: 10px;
+  height: 10px;
+  transition: all 0.3s ease; /* Płynne przejście przy zmianie */
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #3182ce; /* Chakra blue.500 */
+  opacity: 1;
+  transform: scale(1.3);
+}
