Add sending emails when item lost or broken

--- a/backend/api/templates/emails/paymentRequest.html
+++ b/backend/api/templates/emails/paymentRequest.html
@@ -98,12 +98,12 @@
         </p>
         <p>
           Aby potwierdzić ją, prosimy o dokonanie opłaty rezerwacyjnej w
-          wysokości <strong style="color: #e3b230">{{full_price}} PLN</strong> w
+          wysokości <strong style="color: #e3b230">{{full_price}} zł</strong> w
           ciągu <strong>12 godzin</strong>.
         </p>
         <p>
           Tytuł płatności:
-          <strong style="color: #e3b230">{{first_name}} {{last_name}}</strong>.
+          <strong style="color: #e3b230">{{first_name}} {{last_name}} - Silent Disco</strong>.
         </p>
         <p>RevolutId: @michalg02</p>
         <a
