--- a/backend/api/templates/emails/lostOrDamagedItemPayment.html
+++ b/backend/api/templates/emails/lostOrDamagedItemPayment.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Anulowanie rezerwacji słuchawek</title>
+    <title>Opłata za {{status}} słuchawki</title>
     <style>
       .header {
         padding: 10px 0;
@@ -73,10 +73,61 @@
       </div>
       <div style="font-size: 16px; color: #f0f0f0; line-height: 1.6">
         <p>
-          Twoja rezerwacja słuchawek o numerze
-          <span style="color: #e3b230">{{order_code}}</span> została anulowana.
+          Mamy mało fajną wiadomość – wypożyczone przez Ciebie słuchawki o
+          numerze
+          <span style="color: #e3b230">{{item_number}}</span>
+          <span style="color: #f0f0f0">
+            {% if status == "zgubione" %} 
+                nie zostały do nas zwrócone 😬 
+            {% else %} 
+                wróciły do nas uszkodzone 😬 
+            {% endif %}
+          </span>
         </p>
-        <p>Trochę szkoda, że Cię nie będzie 🥲</p>
+        <p>
+          W takich przypadkach, za {{status}} słuchawki, obowiązuje opłata w
+          wysokości
+          <strong style="color: #e3b230">{{price}} zł</strong>.
+        </p>
+        <p>
+          Tytuł płatności:
+          <strong style="color: #e3b230">
+            {{first_name}} {{last_name}} - {{status}} słuchawki</strong
+          >.
+        </p>
+        <p>RevolutId: @michalg02</p>
+        <a
+          href="https://revolut.me/michalg02"
+          class="btn"
+          target="_blank"
+          rel="noopener noreferrer"
+          style="
+            display: inline-block;
+            text-decoration: none;
+            margin: 20px 0;
+            border-radius: 6px;
+          "
+        >
+          <span
+            style="
+              display: inline-block;
+              padding: 12px 24px;
+              background-color: #e30b4e;
+              color: #ffffff;
+              font-weight: bold;
+              border-radius: 6px;
+            "
+            >Opłać rezerwację</span
+          >
+        </a>
+        <p>
+          <strong style="color: #e30b4e">
+            Prosimy o ogarnięcie płatności w ciągu 7 dni. Dzięki z góry!.
+          </strong>
+        </p>
+        <p>
+          Jeśli coś się nie zgadza albo chcesz pogadać – śmiało pisz do nas 😊
+        </p>
         <p>Trzymaj sie! – PlanetaLuzu</p>
       </div>
       <div
