Update rodo and rules

--- a/backend/api/templates/emails/confirmation.html
+++ b/backend/api/templates/emails/confirmation.html
@@ -85,9 +85,9 @@
       </div>
       <div style="font-size: 16px; color: #f0f0f0; line-height: 1.6">
         <p>
-          Twoja rezerwacja słuchawek o numerze
-          <span style="color: #e3b230">{{order_code}}</span> została opłacona.
-          Poniżej znajdziesz kody QR potrzebne do odbioru słuchawek:
+          Twoja opłata rezerwacji słuchawek o numerze
+          <span style="color: #e3b230">{{order_code}}</span> została potwierdzona.
+          Poniżej znajdziesz kod QR potrzebny do odbioru słuchawek:
         </p>
         {% for qr in qr_codes %}
         <div class="qr-image">
