--- a/backend/api/templates/emails/lostOrDamagedItemPayment.html
+++ b/backend/api/templates/emails/lostOrDamagedItemPayment.html
@@ -95,9 +95,9 @@
             {{first_name}} {{last_name}} - {{status}} słuchawki</strong
           >.
         </p>
-        <p>RevolutId: @michalg02</p>
+        <p>RevolutId: @wiktorrfrc</p>
         <a
-          href="https://revolut.me/michalg02"
+          href="https://revolut.me/wiktorrfrc"
           class="btn"
           target="_blank"
           rel="noopener noreferrer"
