--- a/backend/api/templates/emails/paymentRequest.html
+++ b/backend/api/templates/emails/paymentRequest.html
@@ -105,9 +105,9 @@
           Tytuł płatności:
           <strong style="color: #e3b230">{{first_name}} {{last_name}} - Silent Disco</strong>.
         </p>
-        <p>RevolutId: @michalg02</p>
+        <p>RevolutId: @wiktorrfrc</p>
         <a
-          href="https://revolut.me/michalg02"
+          href="https://revolut.me/wiktorrfrc"
           class="btn"
           target="_blank"
           rel="noopener noreferrer"
