--- a/backend/api/templates/emails/lostOrDamagedItemPayment.html
+++ b/backend/api/templates/emails/lostOrDamagedItemPayment.html
@@ -117,7 +117,7 @@
               font-weight: bold;
               border-radius: 6px;
             "
-            >Opłać rezerwację</span
+            >Płatność</span
           >
         </a>
         <p>
