Changed payment mail

--- a/backend/api/templates/emails/paymentRequest.html
+++ b/backend/api/templates/emails/paymentRequest.html
@@ -105,8 +105,9 @@
           Tytuł płatności:
           <strong style="color: #e3b230">{{first_name}} {{last_name}} - Silent Disco</strong>.
         </p>
-        <p>RevolutId: @wiktorrfrc</p>
-        <a
+        <p>Revtag: @planeta_luzu</p>
+        <p>Numer konta: 62291000060000000002224734</p> 
+        {% comment %} <a
           href="https://revolut.me/wiktorrfrc"
           class="btn"
           target="_blank"
@@ -129,7 +130,7 @@
             "
             >Opłać rezerwację</span
           >
-        </a>
+        </a> {% endcomment %}
         <p>🗿 Dzięki! – PlanetaLuzu</p>
       </div>
       <div
